--- a/Social-Media-App-Clone/src/index.css
+++ b/Social-Media-App-Clone/src/index.css
@@ -2,5 +2,5 @@
 @tailwind components;
 @tailwind utilities;
 body {
-    background: rgba(13,17,20,255);
+    background-color: rgba(13,17,20,255);
 }
